adl-frontend/src/test/resources/unit/error/syntactic/Primitive3.adl
primitive Primitive1 { 
	source "
}